[tool.poetry]
name = "sepsis"
version = "0.1.0"
description = ""
authors = ["Titouan Morvan <titouan.morvan1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
scikit-learn = "^1.1.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
ruptures = "^1.1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.961"
pylint = "^2.14.4"
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
